--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
         box-sizing: border-box;
       }
 
-      html {
-        scroll-behavior: smooth;
-      }
-
       body {
         margin: 0;
         font-family: "Segoe UI", system-ui, sans-serif;
@@ -65,7 +61,6 @@
         font-weight: bold;
       }
 
-      /* ---------- SECTIONS ---------- */
       section {
         padding: 80px 20px;
         max-width: 1100px;
@@ -90,17 +85,9 @@
         border: 1px solid var(--border);
         padding: 30px;
         border-radius: 15px;
-        transition:
-          transform 0.3s,
-          box-shadow 0.3s;
       }
 
-      .feature:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 0 25px rgba(56, 189, 248, 0.2);
-      }
-
-      /* ---------- INVESTMENT CARDS ---------- */
+      /* ---------- INVEST ---------- */
       .packages {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -108,15 +95,11 @@
       }
 
       .package {
-        background: linear-gradient(180deg, #020617, #020617);
         border: 1px solid var(--border);
         padding: 35px;
         border-radius: 20px;
-        position: relative;
         cursor: pointer;
-        transition:
-          transform 0.3s,
-          box-shadow 0.3s;
+        transition: 0.3s;
       }
 
       .package:hover {
@@ -124,16 +107,41 @@
         box-shadow: 0 0 35px rgba(56, 189, 248, 0.35);
       }
 
-      .package.active {
-        outline: 2px solid var(--primary);
-      }
-
       .package h3 {
         color: var(--primary);
       }
 
-      .package ul {
-        padding-left: 20px;
+      /* ---------- APP PREVIEW ---------- */
+      .preview-upload {
+        text-align: center;
+        margin-bottom: 40px;
+      }
+
+      .preview-upload button {
+        padding: 14px 30px;
+        border-radius: 30px;
+        border: none;
+        background: linear-gradient(135deg, var(--primary), var(--secondary));
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      .preview-gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 25px;
+      }
+
+      .preview-gallery img {
+        width: 100%;
+        border-radius: 20px;
+        border: 1px solid var(--border);
+        padding: 8px;
+        transition: transform 0.3s;
+      }
+
+      .preview-gallery img:hover {
+        transform: scale(1.05);
       }
 
       /* ---------- MODAL ---------- */
@@ -151,20 +159,9 @@
         border: 1px solid var(--border);
         padding: 40px;
         border-radius: 15px;
-        max-width: 400px;
         text-align: center;
       }
 
-      .modal button {
-        margin-top: 20px;
-        padding: 12px 25px;
-        border-radius: 25px;
-        border: none;
-        background: var(--primary);
-        font-weight: bold;
-      }
-
-      /* ---------- FOOTER ---------- */
       footer {
         text-align: center;
         padding: 30px;
@@ -178,10 +175,7 @@
     <!-- HERO -->
     <div class="hero">
       <h1>RetroVPG</h1>
-      <p>
-        Digitalna arhiva retro videozapisa i fotografija – čuvamo povijest,
-        gradimo budućnost. Povezujemo sve!
-      </p>
+      <p>Digitalna arhiva retro sadržaja i investicijska platforma.</p>
       <button onclick="document.getElementById('invest').scrollIntoView()">
         Investiraj
       </button>
@@ -189,12 +183,12 @@
 
     <!-- FEATURES -->
     <section>
-      <h2>Zašto retroVPG?</h2>
+      <h2>Zašto RetroVPG?</h2>
       <div class="features">
         <div class="feature">📚 Centralizirana baza</div>
-        <div class="feature">🔍 Jednostavna uporaba</div>
-        <div class="feature">🕹️ Fokus na povezivanje ljudi</div>
         <div class="feature">🚀 Organizirana foto galerija</div>
+        <div class="feature">🔒 Privatnost korisnika</div>
+        <div class="feature">📊 Transparentna zarada</div>
       </div>
     </section>
 
@@ -205,46 +199,56 @@
         <div class="package" onclick="selectPackage('Supporter')">
           <h3>🎮 Supporter</h3>
           <p>1 – 10 €</p>
-          <ul>
-            <li>Donacije</li>
-            <li>Rani updateovi i dodatne opcije</li>
-          </ul>
         </div>
 
         <div class="package" onclick="selectPackage('Backer')">
           <h3>🕹️ Backer</h3>
-          <p>10€</p>
-          <ul>
-            <li>Beta pristup (kasnije premium verzija)</li>
-            <li>Glasanje o značajkama</li>
-          </ul>
+          <p>10 €</p>
         </div>
 
         <div class="package" onclick="selectPackage('Investor')">
           <h3>🚀 Investor</h3>
           <p>25 €+</p>
-          <ul>
-            <li>Premium doživotno</li>
-            <li>Istaknuto ime / logo</li>
-            <li>Udio u prihodima*</li>
-          </ul>
         </div>
       </div>
+    </section>
+
+    <!-- =============================== -->
+    <!-- 🔴 APP PREVIEW – OVDJE DODAJEŠ SLIKE SUČELJA -->
+    <!-- =============================== -->
+    <section id="preview">
+      <h2>Pregled aplikacije</h2>
+
+      <!-- 🔴 OVDJE KLIKAŠ I DODAJEŠ SVOJE SLIKE -->
+      <div class="preview-upload">
+        <input
+          type="file"
+          id="imageUpload"
+          accept="image/*"
+          multiple
+          hidden
+        />
+        <button onclick="document.getElementById('imageUpload').click()">
+          📸 Dodaj slike sučelja
+        </button>
+        <p style="color: var(--muted)">
+          Slike su samo za vizualni pregled aplikacije
+        </p>
+      </div>
+
+      <!-- 🔴 OVDJE SE AUTOMATSKI PRIKAZUJU TVOJE SLIKE -->
+      <div class="preview-gallery" id="previewGallery"></div>
     </section>
 
     <!-- MODAL -->
     <div class="modal" id="modal">
       <div class="modal-content">
         <h3 id="modalTitle"></h3>
-        <p>
-          Hvala na interesu za retroVPG! Kontaktirat ćemo vas s daljnjim
-          informacijama.
-        </p>
         <button onclick="closeModal()">Zatvori</button>
       </div>
     </div>
 
-    <footer>© 2026 retroVPG • Investicijska aplikacija</footer>
+    <footer>© 2026 RetroVPG</footer>
 
     <script>
       function selectPackage(name) {
@@ -256,6 +260,24 @@
       function closeModal() {
         document.getElementById("modal").style.display = "none";
       }
+
+      /* 🔴 LOGIKA ZA PREVIEW TVOJIH SLIKA */
+      const uploadInput = document.getElementById("imageUpload");
+      const gallery = document.getElementById("previewGallery");
+
+      uploadInput.addEventListener("change", function () {
+        gallery.innerHTML = "";
+
+        Array.from(this.files).forEach((file) => {
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            const img = document.createElement("img");
+            img.src = e.target.result;
+            gallery.appendChild(img);
+          };
+          reader.readAsDataURL(file);
+        });
+      });
     </script>
   </body>
 </html>
