--- a/index.html
+++ b/index.html
@@ -213,13 +213,19 @@
       </div>
     </section>
 
-    <!-- =============================== -->
-    <!-- 🔴 APP PREVIEW – OVDJE DODAJEŠ SLIKE SUČELJA -->
-    <!-- =============================== -->
+    <img
+      src="ChatGPT Image Feb 2, 2026, 09_45_16 AM.png"
+      alt="Sučelje aplikacije"
+    />
+
     <section id="preview">
       <h2>Pregled aplikacije</h2>
+        <img
+      src="123.png"
+      alt="Pregled galerije"
+    />
 
-      <!-- 🔴 OVDJE KLIKAŠ I DODAJEŠ SVOJE SLIKE -->
+   
       <div class="preview-upload">
         <input
           type="file"
