--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer {
 
 <!-- LOGO NA POČETKU -->
 <div class="top-logo">
-  <img src="logo.png" alt="RetroVPG Logo">
+  <img src="Capture.JPG" alt="RetroVPG Logo">
 </div>
 
 <!-- HERO -->
