--- a/index.html
+++ b/index.html
@@ -136,16 +136,6 @@ h2 {
   transform: scale(1.05);
 }
 
-
-.preview-gallery img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;   /* sve slike iste veličine */
-  border-radius: 15px;
-  border: 2px solid var(--border);
-  background: white;
-}
-
 /* ===== UPLOAD ===== */
 .preview-upload {
   text-align: center;
@@ -222,14 +212,18 @@ footer {
     <div class="package" onclick="selectPackage('Supporter')">
       <h3>🎮 Supporter</h3>
       <p>1 – 10 €</p>
+      <p>Dodatne mogućnosti i paketi</p>
     </div>
     <div class="package" onclick="selectPackage('Backer')">
       <h3>🕹️ Backer</h3>
       <p>10 €</p>
+      <p>Premium verzija</p>
     </div>
     <div class="package" onclick="selectPackage('Investor')">
       <h3>🚀 Investor</h3>
       <p>25 €+</p>
+      <p>Premium verzija</p>
+      <p>5% udio vlasništva</p>
     </div>
   </div>
 </section>
