--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -182,7 +182,7 @@ footer {
 
 <!-- LOGO NA POČETKU -->
 <div class="top-logo">
-  <img src="Capture.JPG" alt="RetroVPG Logo">
+  <img src="Capture.jpg" alt="RetroVPG Logo">
 </div>
 
 <!-- HERO -->
